# pii-redact

./: CLAUDE.md  pyproject.toml
src/pii_redact/: __init__.py  patterns.py  phone.py
tests/: test_patterns.py
