[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pii-redact"
version = "0.1.0"
description = "Pure-regex PII redaction library for engineering text"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/pii_redact"]

[tool.pytest.ini_options]
testpaths = ["tests"]
